--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -20,12 +20,14 @@ time, mark, audio, video {
 }
 
 html {
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
 
 *,
 *::after,
 *::before {
+  -webkit-box-sizing: inherit;
   box-sizing: inherit;
 }
 
@@ -53,21 +55,21 @@ q:before, q:after {
 }
 
 a {
-    margin:0;
-    padding:0;
-    font-size:100%;
-    vertical-align:baseline;
-    background:transparent;
+    margin: 0;
+    padding: 0;
+    font-size: 100%;
+    vertical-align: baseline;
+    background: transparent;
+    text-decoration: none;
+    color: inherit;
 }
 
-/* change colours to suit your needs */
 ins {
     background-color:#ff9;
     color:#000;
     text-decoration:none;
 }
 
-/* change colours to suit your needs */
 mark {
     background-color:#ff9;
     color:#000; 
@@ -89,7 +91,6 @@ table {
     border-spacing:0;
 }
 
-/* change border colour to suit your needs */
 hr {
     display:block;
     height:1px;
@@ -101,6 +102,8 @@ hr {
 
 input, select {
     vertical-align:middle;
+    background: transparent;
+    border: none;
 }
 
 a {
@@ -113,8 +116,16 @@ button {
   border: none;
   padding: 0;
   cursor: pointer;
+  color: inherit;
+  font-size: inherit
 }
 
-ul {
+ul, ol, li {
   list-style: none;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+  vertical-align: middle;
 }
