--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 :root {
   --primary: #7449BB;
-  --primary-lg: ##C4A9CD;
+  --primary-lg: #C4A9CD;
   --wh: #FFFFFF;
   --bl: #1B1B1B;
 
@@ -326,4 +326,108 @@ margin-bottom: 10px;
 
 .else__item-price {
   font-family: var(--playfair), sans-serif;
+}
+
+.video {
+  margin-bottom: 150px;
+}
+
+.video__box {
+  margin-left: auto;
+  max-width: 997px;
+  min-height: 600px;
+  background: url(../img/video-bg.jpg) no-repeat center / cover;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+}
+
+.footer {
+  background-color: var(--primary-lg);
+  padding: 65px 0 100px;
+}
+
+.footer__top {
+  margin-bottom: 70px;
+  gap: 30px 70px;
+}
+
+.footer__logo {
+  margin-right: 13px;
+}
+
+.footer__items {
+  flex-basis: 427px
+}
+
+.footer__item + .footer__item {
+  margin-top: 70px;
+}
+
+.footer__item-title {
+  margin-bottom: 10px;
+  text-transform: uppercase;
+  font-weight: 700;
+}
+
+.footer__item-form {
+  position: relative;
+}
+
+.footer__item-input {
+  width: 100%;
+  display: block;
+  padding: 10px 60px 10px 0;
+  border-bottom: 1px solid var(--bl);
+  font: 400 normal 14px/normal var(--inter), sans-serif;
+}
+
+.footer__item-input::placeholder {
+  font-size: 12px;
+  color: var(--bl);
+  opacity: 0.4;
+  font-family: var(--inter)
+}
+
+.footer__item-button {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+
+.footer__item-list li {
+  padding-top: 10px;
+}
+
+.footer__social-list {
+  align-self: flex-end;
+  margin-left: 13px;
+  margin-right: 105px;
+}
+
+.footer__social-item + .footer__social-item {
+  margin-top: 20px;
+}
+
+.footer__social-item svg path{
+  transition: all .3s;
+}
+
+.footer__social-item:hover svg path{
+  fill: var(--primary)
+}
+
+.footer__bottom {
+  margin-right: 105px;
+}
+
+.footer__bottom-items {
+  max-width: 906px;
+  margin-left: auto;
+  gap: 20px;
 }
